@@ -240,6 +240,7 @@ All (GUI):
 - smoother time estimation updates in wxProgressDialog (Christian Sturmlechner)
 - the XRC contrib library was moved to the core
 - wx(Choice/List/Note)book controls send CHANG(ED/ING) events in SetSelection
+- it is now possible to create a wxFont with given size in pixels (d2walter)
 
 Unix:
 
